<resources>
    <string name="app_name">Listando</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_novo_mercado">Cadastar mercado</string>
    <string name="action_nova_lista">Nova lista de compras</string>
    <string name="text_compras">Compras</string>
    <string name="text_preco">Preço</string>
    <string name="text_produto">Produto</string>
    <string name="text_quantidade">Quantidade</string>
    <string name="button_salvar">Salvar</string>
    <string name="text_nome_mercado">Nome:</string>
    <string name="text_telefone">Telefone:</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_mercados">Mercados</string>
    <string name="text_mapa_mercados">Mapa de mercados</string>
    <string name="btn_buscar">Buscar</string>
    <string name="edt_pesquisa">Pesquisa..</string>
    <string name="header_nome">Listando</string>
    <string name="header_descricao">Organize suas compras de uma forma rápida de fácil</string>
    <string name="text_sobre">Projeto de aplicativo com intuito de organizar a lista de compras de supermercado de forma mais prática</string>
    <string name="text_sobre2">Aula: Android II </string>
    <string name="text_sobre3">Desenvolvido por: Lucas C. Rodrigues</string>
    <string name="text_nome_mercado_lista">Mercado:</string>
    <string name="text_view_lista_nome">Nome da lista</string>
    <string name="text_cad_mercado_nome">Nome do mercado</string>
    <string name="text_cad_mercado_telefone">Telefone</string>
    <string name="text_cad_localizacao">Localização</string>
    <string name="text_nome_lista">Dê um nome para sua lista</string>
    <string name="text_mercado_lista">Escolha um dos mercados</string>
    <string name="text_lista_data">Data</string>
    <string name="action_nova_compra">Adicionar produto</string>
    <string name="valor_gasto">Total:</string>
    <string name="action_editar">Editar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_editar_lista">Editar lista</string>
    <string name="action_excluir_lista">Excluir lista</string>

</resources>
