<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:text="@string/text_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_compra_list_item_tvProduto"/>

    <TextView
        android:text="@string/text_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_compra_list_item_tvPreco"/>

    <TextView
        android:text="@string/text_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_compra_list_item_tvQuantidade"/>

</LinearLayout>
