<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:text="@string/text_nome_mercado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_mercado_list_item_tvNomeMercado"/>

    <TextView
        android:text="@string/text_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_mercado_list_item_tvTelefone"/>

    <TextView
        android:text="@string/text_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_mercado_list_item_tvLatitude"/>

</LinearLayout>
