<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_restaurant_black_36dp"
            android:title="@string/text_compras" />
        <item
            android:id="@+id/nav_mercados"
            android:icon="@drawable/ic_store_mall_directory_black_36dp"
            android:title="@string/text_mercados" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_my_location_black_36dp"
            android:title="@string/text_mapa_mercados" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_rate_review_black_36dp"
            android:title="Sobre" />
    </group>
</menu>
