<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compras_cad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.projetovendas.compras.ComprasCadActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/compra_cad_edtProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_produto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/compra_cad_edtPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_preco" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/compra_cad_edtQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_quantidade" />
    </android.support.design.widget.TextInputLayout>


    <ImageButton
        android:id="@+id/compra_cad_btnFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/photo36dp" />

    <Button
        android:id="@+id/compra_cad_btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salvarCompra"
        android:text="@string/button_enviar" />


</LinearLayout>
