<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">


        <ImageView
            android:id="@+id/fragment_lista_list_item_imgLista"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:src="@drawable/comida" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_lista_list_item_tvLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_lista_nome" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:text="@string/text_nome_mercado_lista" />

                <TextView
                    android:id="@+id/fragment_lista_list_item_tvNomeMercado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nome_mercado" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
