<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_nome_mercado"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/activity_mercado_tvMercadoNome"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_mercados"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingRight="3dp"
                                android:text="@string/text_telefone"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/activity_mercado_tvTelefone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_cad_mercado_telefone"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="right|center_vertical">

                        <ImageView
                            android:id="@+id/activity_mercado_imgMercado"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:src="@drawable/carrinho_de_compras" />
                    </LinearLayout>

                </LinearLayout>

                <!--<include layout="@layout/fragment_denuncia_mapa"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_margin="4dp">

                    <include layout="@layout/fragment_mapa" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
